--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Share Kural</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Web Application to Search and Share Thirukkural as PNG images"
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
