--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
 <head>
     <title>Share Kural</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Web Application to Search and Share Thirukkural as PNG images"
-
+    <meta name="description" content="Web Application to Search and Share Thirukkural as PNG images" >
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -15,6 +14,8 @@
 
 
     <link href="style.css" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
 
     <style>
@@ -124,7 +125,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-analytics.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
 
-<script src = "firebase_config.js"></script>
-<script src = "index.js"></script>
+<script src="firebase_config.js"></script>
+<script src="index.js"></script>
 
 </html>
