turn off browser autocomplete

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         or
         <br>
         <div class="dropdown">
-            <input placeholder="Search..." oninput="search_input()" type="text" id="search_txt"
+            <input placeholder="Search..." oninput="search_input()" type="text" id="search_txt" autocomplete="off"
                 data-bs-toggle="dropdown">
             <ul class="dropdown-menu" id="search_list" style="max-height: 300px; max-width: 250px; overflow: auto;">
 
